--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,19 @@
-# build output
-dist/
-
-# generated types
-.astro/
-
-# dependencies
+# Node.js
 node_modules/
+.env
 
-# logs
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
-.DS_Store
-
-# jetbrains setting folder
+# Editor-specific
+.vscode/
 .idea/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# ASTRO
+/.astro/
