--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.12",
-    "typescript": "^5.6.2",
-    "react": "^18.3.1"
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.7",
