--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
+    "@astrojs/svelte": "^5.7.1",
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^4.15.6",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "svelte": "^4.2.19",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   },
